--- a/login.html
+++ b/login.html
@@ -18,7 +18,7 @@
     <!-- icones -->
     <link rel="stylesheet" href="https://file.myfontastic.com/Sf3bLHBYtyyjc8qKTmPFVK/icons.css">
     <!-- css externo -->
-    <link rel="stylesheet" href="css/style.css">
+    <link rel="stylesheet" href="css/main.css">
   </head>
   <body>
 
