--- a/login.html
+++ b/login.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="utf-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <title>Trivia</title>
+    <title>GIFtinder</title>
     <meta name="viewport" content="width=device-width, initial-scale=1">
     
     <script src="https://www.gstatic.com/firebasejs/5.3.0/firebase-app.js"></script>
@@ -18,7 +18,6 @@
     <!-- icones -->
     <link rel="stylesheet" href="https://file.myfontastic.com/Sf3bLHBYtyyjc8qKTmPFVK/icons.css">
     <!-- css externo -->
-    <link rel="stylesheet" href="css/main.css">
   </head>
   <body>
 
