--- a/index.html
+++ b/index.html
@@ -1,11 +1,24 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>GIFtinder</title>
-    <link rel="stylesheet" href="css/main.css">
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <meta http-equiv="X-UA-Compatible" content="ie=edge">
+  <title>GIFtinder</title>
+  <link rel="stylesheet" href="css/main.css">
+  <script src="https://www.gstatic.com/firebasejs/5.5.2/firebase.js"></script>
+  <script>
+    var config = {
+        apiKey: "AIzaSyAUauAREk0n-Zde_c7NFqAIYU2PQxl6jOg",
+        authDomain: "giftinder-lab.firebaseapp.com",
+        databaseURL: "https://giftinder-lab.firebaseio.com",
+        projectId: "giftinder-lab",
+        storageBucket: "giftinder-lab.appspot.com",
+        messagingSenderId: "567013199766"
+    };
+    firebase.initializeApp(config);
+  </script>
+  <script src="https://www.gstatic.com/firebasejs/5.4.1/firebase-firestore.js"></script>
 </head>
 <body>
     
