--- a/index.html
+++ b/index.html
@@ -21,6 +21,18 @@
   <script src="https://www.gstatic.com/firebasejs/5.4.1/firebase-firestore.js"></script>
 </head>
 <body>
-    
+
+
+
+
+
+
+
+
+
+
+
+  
+  <script src="js/app.js"></script>
 </body>
 </html>
