--- a/index.html
+++ b/index.html
@@ -7,32 +7,12 @@
   <title>GIFtinder</title>
   <link rel="stylesheet" href="css/main.css">
   <script src="https://www.gstatic.com/firebasejs/5.5.2/firebase.js"></script>
-  <script>
-    var config = {
-        apiKey: "AIzaSyAUauAREk0n-Zde_c7NFqAIYU2PQxl6jOg",
-        authDomain: "giftinder-lab.firebaseapp.com",
-        databaseURL: "https://giftinder-lab.firebaseio.com",
-        projectId: "giftinder-lab",
-        storageBucket: "giftinder-lab.appspot.com",
-        messagingSenderId: "567013199766"
-    };
-    firebase.initializeApp(config);
-  </script>
-  <script src="https://www.gstatic.com/firebasejs/5.4.1/firebase-firestore.js"></script>
+ 
 </head>
 <body>
+  <div id="showGIF"></div>
 
 
-
-
-
-
-
-
-
-
-
-  
   <script src="js/app.js"></script>
 </body>
 </html>
