--- a/index.html
+++ b/index.html
@@ -17,7 +17,6 @@
   <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css">
   <!-- css externo -->
   <link rel="stylesheet" href="css/main.css">
-<<<<<<< HEAD
   <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.3.1/css/all.css" integrity="sha384-mzrmE5qonljUremFsqc01SB46JvROS7bZs3IO2EmfFsd15uHvIt+Y8vEf7N7fWAU" crossorigin="anonymous">
   <script src="https://www.gstatic.com/firebasejs/5.5.2/firebase.js"></script>
   <script>
@@ -32,13 +31,22 @@
     firebase.initializeApp(config);
   </script>
   <script src="https://www.gstatic.com/firebasejs/5.4.1/firebase-firestore.js"></script>
-=======
  
->>>>>>> d5a9df4dce69899c459c861183959eafef5e34b7
 </head>
 <body>
-
-  <div id="showGIF"></div>
+  <nav>
+      <ul class="menu">
+        <div>
+          <i href="#" class="fas fa-user-alt"></i>
+        </div>
+        <div>
+            <i class="fas fa-heart"></i>
+        </div>
+        <div>
+            <h1>GIFtinder</h1>
+          </div>
+      </ul>
+      </nav>
 
   <script src="https://code.jquery.com/jquery-3.3.1.min.js" integrity="sha256-FgpCb/KJQlLNfOu91ta32o/NMZxltwRo8QtmkMRdAu8="
     crossorigin="anonymous"></script>
