--- a/index.html
+++ b/index.html
@@ -12,16 +12,16 @@
   <!-- firebase database -->
   <script src="https://www.gstatic.com/firebasejs/5.3.0/firebase-database.js"></script>
   <!-- firebase API KEY -->
-  <script src="config/firebase-config.js"></script>
+  <script src="dist/config/firebase-config.js"></script>
   <!-- bootstrap -->
   <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css">
   <!-- css externo -->
-  <link rel="stylesheet" href="css/main.css">
+  <link rel="stylesheet" href="dist/css/main.css">
  
 </head>
 <body>
 
-  <div id="showGIF"></div>
+  <main></main>
 
   <script src="https://code.jquery.com/jquery-3.3.1.min.js" integrity="sha256-FgpCb/KJQlLNfOu91ta32o/NMZxltwRo8QtmkMRdAu8="
     crossorigin="anonymous"></script>
@@ -32,6 +32,6 @@
   <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/js/bootstrap.min.js" integrity="sha384-ChfqqxuZUCnJSK3+MXmPNIyE6ZbWh2IMqE241rYiqJxyMiZ6OW/JmZQ5stwEULTy"
     crossorigin="anonymous"></script>
 
-  <script src="js/app.js"></script>
+  <script src="dist/js/app.js"></script>
 </body>
 </html>
