--- a/login.html
+++ b/login.html
@@ -12,12 +12,13 @@
     <!-- firebase database -->
     <script src="https://www.gstatic.com/firebasejs/5.3.0/firebase-database.js"></script>
     <!-- firebase API KEY -->
-    <script src="config/firebase-config.js"></script>
+    <script src="dist/config/firebase-config.js"></script>
     <!-- bootstrap -->
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css">
     <!-- icones -->
     <link rel="stylesheet" href="https://file.myfontastic.com/Sf3bLHBYtyyjc8qKTmPFVK/icons.css">
     <!-- css externo -->
+    <link rel="stylesheet" href="dist/css/main.css">
   </head>
   <body>
 
@@ -137,6 +138,6 @@
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/js/bootstrap.min.js" integrity="sha384-ChfqqxuZUCnJSK3+MXmPNIyE6ZbWh2IMqE241rYiqJxyMiZ6OW/JmZQ5stwEULTy"
       crossorigin="anonymous"></script>
     
-    <script src="js/login.js"></script>
+    <script src="dist/js/login.js"></script>
   </body>
 </html>
