--- a/favorites.html
+++ b/favorites.html
@@ -11,7 +11,7 @@
 <body>
         <header class="site-header">
                 <div class="container">
-                <h1>GIFtinder</h1>
+                <h2>GIFtinder</h2>
                 <div><i class="fas fa-heart"></i></div>
                 </div>
               </header>
@@ -28,11 +28,9 @@
                     <p>Lorem Ipsum</p>
                   </div>
               </section>
-              
-              <footer class="site-footer" role="contentinfo">
-                <div class="container">
-                  <p>© GIFtinder 2018</a></p>
-                </div>
+
+              <footer class="footer">
+                    <p class="copyright">© GIFtinder 2018</p>
               </footer>
             
 </body>
