--- a/index.html
+++ b/index.html
@@ -22,25 +22,25 @@
 </head>
 <body>
   <nav>
-      <ul class="menu">
-        <div>
-          <a href="#" class="fas fa-user-alt"></a>
-        </div>
-        <div>
-          <a href="#" class="fas fa-heart"></a>
-        </div>
-        <div>
-          <h1>GIFtinder</h1>
-        </div>
+    <ul class="menu">
+      <div>
+        <a href="#" class="fas fa-user-alt"></a>
+      </div>
+      <div>
+        <a href="#" class="fas fa-heart"></a>
+      </div>
+      <div>
+        <h1>GIFtinder</h1>
+      </div>
     
-      </ul>
+    </ul>
   </nav>
 
-  <main></main>
+  <main class="d-flex justify-content-center"></main>
 
   <footer class="footer">
-      <p class="copyright">© GIFtinder 2018</p>
-</footer>
+    <p class="copyright">© GIFtinder 2018</p>
+  </footer>
 
   <script src="https://code.jquery.com/jquery-3.3.1.min.js" integrity="sha256-FgpCb/KJQlLNfOu91ta32o/NMZxltwRo8QtmkMRdAu8="
     crossorigin="anonymous"></script>
